Update build config and add JavaFX/LWJGL support
Refactored build.gradle to use Gradle plugins DSL, added JavaFX and LWJGL dependencies, and updated Java compatibility to version 21. Added new files for JavaFX and LWJGL integration, and a sample FXML file. Minor code improvements in Point.java for Double parsing. Added a Python script to convert file encoding for glslFuncRunner.java.